clear walked waypoints